static/css/base.css
/* ... */
/* Set max-width for the image lightbox on xl screens */
.modal.lightbox .modal-dialog.modal-dialog-centered.modal-xl {
  max-width: 900px;
}
/* Set the lightbox ratio */
.modal-body .lightbox-carousel .carousel-inner .carousel-item.active .ratio {
  position: relative;
  width: 100% !important;
  /* set the aspect ratio-1x1 */
  --bs-aspect-ratio: calc(100%) !important;
}
/* Change the color of the close button svg */
.modal.lightbox button.btn-close > svg {
  fill: #555;
}

/* Product Favorite icon */
.product-card-3 .favorites {
  position: absolute;
  top: 20px;
  right: 26px;
  z-index: 1;
}

/********************* Product Delete Modal *********************/


/* =================== Header Section Jumbotron Parallax ==================== */

/* Remove Bottom Margin */
.jumbotron {
  margin-bottom: 0;
}

/* Header Parallax Element Style*/
.paral {
  height: 100vh;
  bottom: 0;
  background-attachment: fixed;
  background-size: cover;
  background-position: 70% 70%;
}

/* Image for Jumbotron Parallax Section */
.paralsec {
  background-image: url("/media/bg_shakyamuni.png");
}

.fourofour {
  position: fixed; 
  top: -50%; 
  left: -50%; 
  width: 200%; 
  height: 200%;
}

.fourofour img {
  position: absolute; 
  top: 0; 
  left: 0; 
  right: 0; 
  bottom: 0; 
  margin: auto; 
  min-width: 50%;
  min-height: 50%;
}

/* Heading for Jumbotron Parallax Section */
.paral h1 {
  color: rgba(255, 255, 255, 0.8);
  font-size: 30px;
  text-align: center;
  padding-top: 100px;
  line-height: 60px;
}

/* Paragrapgh for Parallax Section */
.paral p {
  font-size: 18px;
  color: #f5f5f5;
  text-align: center;
  line-height: 40px;
}

/* ============= MEDIA QUERY only screen and (min-width: 768px) ============= */

@media only screen and (min-width: 768px){
  .jumbotron {
    margin-bottom: 0;
    padding-top: 220px;
  }
  .paral h1 {
    color: rgba(255, 255, 255, 0.8);
    font-size: 60px;
    text-align: center;
    padding-top: 60px;
    line-height: 100px;
  }
  .paral p {
    font-size: 24px;
    color: #f5f5f5;
    text-align: center;
    line-height: 60px;
  }
}

/* ============= MEDIA QUERY only screen and (min-width: 992px) ============= */

@media only screen and (min-width: 992px){
  .jumbotron {
    margin-bottom: 0;
    padding-top: 200px;
  }
  .paral h1 {
    color: rgba(255, 255, 255, 0.8);
    font-size: 60px;
    text-align: center;
    padding-top: 60px;
    line-height: 100px;
  }
}

/* =========================== SERVICES SECTION ============================= */

.section {
  padding-top: 80px;
  padding-bottom: 80px;
  position: relative;
  background: #ffffff;
}

.section-sm {
  padding: 50px 0;
}

.section-lg {
  padding: 100px 0;
}

.services-box {
  padding: 30px;
}

.services-box .services-icon i {
  font-size: 36px;
}

.services-box .services-title {
  font-size: 18px;
}

/* =========================== TESTIMONIAL SECTION ========================== */

.bg-client {
  background-image: url("/media/cartographer.png");
}

.bg-client .user-review {
  font-size: 20px;
  line-height: 36px;
  font-style: italic;
  color: rgba(255, 255, 255, 0.65);
}

.bg-client .testi-icon {
  font-size: 30px;
}

.btn-testimonial-cont {
  position: relative;
}

/*********** Style the carousel testimonial button ***********/

.testimonial-btn-wrapper {
  position: absolute;
  float: none;
  top: 5px;
  left: 0;
  text-align: center;
}

#btn-testimonial {
  width: 50px;
  height: 50px;
  padding-top: 10px;
  padding-bottom: 10px;
  -webkit-transition: width 0.5s;
  -o-transition: width 0.5s;
  transition: width 0.5s;
}
#btn-testimonial:hover {
  width: 220px;
  -webkit-transition: width 0.5s;
  -o-transition: width 0.5s;
  transition: width 0.5s;
}

#btn-testimonial i {
  opacity: 1;
  -webkit-transition: opacity 0.1s;
  -o-transition: opacity 0.1s;
  transition: opacity 0.1s;
}

#btn-testimonial:hover i {
  opacity: 0;
  -webkit-transition: opacity 0.1s;
  -o-transition: opacity 0.1s;
  transition: opacity 0.1s;
}

#btn-testimonial .button-text {
  opacity: 0;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
  position: absolute;
  width: 0px;
  right: 0;
  display: inline-block;
 }

#btn-testimonial:hover .button-text {
  opacity: 1;
  -webkit-transition: opacity 2s;
  -o-transition: opacity 2s;
  transition: opacity 2s;
  display: inline-block;
  width: 220px;
}

/************* Testimonial form rating css **************/
.rate {
  float: left;
  height: 46px;
  padding: 0 10px;
}
.rate:not(:checked) > input {
  position:absolute;
  top:-9999px;
}
.rate:not(:checked) > label {
  float:right;
  width:1em;
  overflow:hidden;
  white-space:nowrap;
  cursor:pointer;
  font-size:30px;
  color:#ccc;
}
.rate:not(:checked) > label:before {
  content: '★ ';
}
.rate > input:checked ~ label {
  color: #ffc700;    
}
.rate:not(:checked) > label:hover,
.rate:not(:checked) > label:hover ~ label {
  color: #deb217;  
}
.rate > input:checked + label:hover,
.rate > input:checked + label:hover ~ label,
.rate > input:checked ~ label:hover,
.rate > input:checked ~ label:hover ~ label,
.rate > label:hover ~ input:checked ~ label {
  color: #c59b08;
}

/* ================================= CONTACT =================================*/

textarea.form-control {
  height: auto !important;
}




/******************* Social icons *******************/

.contact-social {
  padding: 20px 0px;
}

.contact-social .social-icon {
  border: 3px solid #dadcdf;
  border-radius: 50%;
  color: #dadcdf;
  width: 48px;
  height: 48px;
  display: block;
  font-size: 16px;
  line-height: 42px;
  text-align: center;
}

.contact-social .contact-title {
  font-size: 20px;
}

.footer {
  background-image: url("/media/cartographer.png");
  position: relative;
  margin-top: 3em;
}
/* ... */

